# wifi-connect

./: .bowerrc  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.template  ManualTests.md  README.html  README.md  TODO  bower.json  coffeelint.json  package-lock.json  package.json  renovate.json  repo.yml  rustfmt.toml  start  versionist.conf.js
.cargo/: config
.circleci/: config.yml
.github/: CODEOWNERS  renovate.json
.github/actions/publish/: action.yml
.github/workflows/: flowzone.yml
.versionbot/: CHANGELOG.yml
assets/bind/: db.catchall  named.conf
assets/firmware/: bcm43341.conf
assets/namedb/: db.catchall
assets/sbin/: hostapd  hostapd_cli
docs/: command-line-arguments.md  state-flow-diagram.md
firmware/intel-edison/: bcm43341.hcd  bcmdhd.cal  bcmdhd_aob.cal
public/: index.html
public/js/: index.js
python-server/: main.py
scripts/: deploy.sh  local-build.sh  raspbian-install.sh  start.sh
scripts/docker/aarch64-unknown-linux-gnu/: Dockerfile
scripts/docker/arm-unknown-linux-gnueabihf/: Dockerfile
scripts/docker/armv7-unknown-linux-gnueabihf/: Dockerfile
src/: app.coffee  cli.rs  client.rs  config.coffee  config.json  config.rs  connman.coffee  dbus-promise.coffee  dnsmasq.coffee  dnsmasq.rs  errors.rs  exit.rs  hostapd.coffee  hotspot.coffee  iptables.coffee  logger.rs  main.rs  modprobe.coffee  network.rs  networkManager.coffee  opts.rs  package.json  privileges.rs  server.rs  systemd.coffee  utils.coffee  web.rs  wifi-scan.coffee  wifi.json
src/public/: index.html
ui/: .gitignore  .lintstagedrc  README.md  docker-compose.yml  index.html  networks  package-lock.json  package.json  tslint.json  vite.config.ts
ui-vite/: .lintstagedrc  package-lock.json  package.json  vite.config.ts
ui/chosen/: component-chosen.css
ui/js/: bootstrap-password-toggler.min.js  index.js  wifi-connect.js
ui/public/: index.html
ui/src/: config.tsx  index.tsx  translations.tsx
(+11 files in other folders)
