[package]
name = "wifi-connect"
version = "4.4.5"
authors = ["Zahari Petkov <zahari@balena.io>"]
description = "Easy WiFi setup for Linux devices from your mobile phone or laptop"
edition = "2018"

[dependencies]
clap = "2.24"
iron = "0.6"
iron-cors = "0.8"
staticfile = "0.5"
mount = "0.4"
router = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
persistent = "0.4"
params = "0.8"
log = "0.3"
env_logger = "0.4"
nix = "0.21"
libc = "0.2"
futures-core = "0.3"
futures-channel = "0.3"
bitflags = "1.2"
ascii = "0.8"

[dependencies.nm]
git = "https://github.com/balena-io-modules/libnm-rs.git"

[dependencies.glib]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.error-chain]
version = "0.11"
default-features = false

[profile.release]
lto = true
