[package]
name = "wifi-connect"
version = "5.0.0"
authors = ["majorz"]
description = "Easy WiFi setup for Linux devices from your mobile phone or laptop"
edition = "2018"

[dependencies]
anyhow = "1"
axum = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
nm = { git = "https://github.com/balena-io-modules/libnm-rs.git" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }

[profile.release]
lto = true
