[package]
name = "wifi-connect"
version = "4.11.20"
authors = ["Zahari Petkov <zahari@balena.io>"]
description = "Easy WiFi setup for Linux devices from your mobile phone or laptop"

[dependencies]
network-manager = { git = "https://github.com/balena-io-modules/network-manager.git" }
clap = "2.24"
iron = "0.6"
iron-cors = "0.8"
staticfile = "0.5"
mount = "0.4"
router = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
persistent = "0.4"
params = "0.8"
log = "0.3"
env_logger = "0.4"
nix = "0.25"

[dependencies.error-chain]
version = "0.12"
default-features = false

[profile.release]
lto = true
